[JS] Fix dropdown control and host container high contrast
Fixes VSO 30866987

--- a/source/nodejs/adaptivecards-designer/src/containers/outlook/outlook-container.css
+++ b/source/nodejs/adaptivecards-designer/src/containers/outlook/outlook-container.css
@@ -130,10 +130,20 @@ a.ac-anchor:visited:active {
     border: 1px solid #0078D7;
 }
 
-.ac-pushButton.expanded {
-    background-color: #0078D7;
-    color: white;
-    border: 1px solid #0078D7;
+@media not (forced-colors: active) {
+    .ac-pushButton.expanded {
+        background-color: #0078D7;
+        color: white;
+        border: 1px solid #0078D7;
+    }
+}
+
+@media (forced-colors: active) {
+    .ac-pushButton.expanded {
+        background-color: highlight;
+        color: highlightText;
+        forced-color-adjust: none;
+    }
 }
 
 .ac-pushButton.expandable:after {
